@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,6 +22,8 @@
  */
 
 import java.io.IOException;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
 import java.util.Random;
@@ -29,12 +31,10 @@ import java.util.concurrent.ExecutionException;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
 import jdk.test.lib.RandomFactory;
 import org.testng.annotations.*;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_BYTE;
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static org.testng.Assert.*;
 
 /**
@@ -51,10 +51,9 @@ public class AbstractChannelsTest {
         void accept(T action) throws X;
     }
 
-    static ResourceScope closeableScopeOrNull(ResourceScope scope) {
-        if (scope == ResourceScope.globalScope())
-            return null;
-        return scope;
+    static MemorySession closeableSessionOrNull(MemorySession session) {
+        return (session.isCloseable()) ?
+                session : null;
     }
 
     static long remaining(ByteBuffer[] buffers) {
@@ -73,29 +72,29 @@ public class AbstractChannelsTest {
 
     static final Random RANDOM = RandomFactory.getRandom();
 
-    static ByteBuffer segmentBufferOfSize(ResourceScope scope, int size) {
-        var segment = MemorySegment.allocateNative(size, 1, scope);
+    static ByteBuffer segmentBufferOfSize(MemorySession session, int size) {
+        var segment = MemorySegment.allocateNative(size, 1, session);
         for (int i = 0; i < size; i++) {
             segment.set(JAVA_BYTE, i, ((byte)RANDOM.nextInt()));
         }
         return segment.asByteBuffer();
     }
 
-    static ByteBuffer[] segmentBuffersOfSize(int len, ResourceScope scope, int size) {
+    static ByteBuffer[] segmentBuffersOfSize(int len, MemorySession session, int size) {
         ByteBuffer[] bufs = new ByteBuffer[len];
         for (int i = 0; i < len; i++)
-            bufs[i] = segmentBufferOfSize(scope, size);
+            bufs[i] = segmentBufferOfSize(session, size);
         return bufs;
     }
 
     /**
      * Returns an array of mixed source byte buffers; both heap and direct,
-     * where heap can be from the global scope or scope-less, and direct are
-     * associated with the given scope.
+     * where heap can be from the global session or session-less, and direct are
+     * associated with the given session.
      */
-    static ByteBuffer[] mixedBuffersOfSize(int len, ResourceScope scope, int size) {
+    static ByteBuffer[] mixedBuffersOfSize(int len, MemorySession session, int size) {
         ByteBuffer[] bufs;
-        boolean atLeastOneScopeBuffer = false;
+        boolean atLeastOneSessionBuffer = false;
         do {
             bufs = new ByteBuffer[len];
             for (int i = 0; i < len; i++) {
@@ -106,12 +105,12 @@ public class AbstractChannelsTest {
                     case 1 -> { byte[] b = new byte[size];
                                 RANDOM.nextBytes(b);
                                 yield MemorySegment.ofArray(b).asByteBuffer(); }
-                    case 2 -> { atLeastOneScopeBuffer = true;
-                                yield segmentBufferOfSize(scope, size); }
+                    case 2 -> { atLeastOneSessionBuffer = true;
+                                yield segmentBufferOfSize(session, size); }
                     default -> throw new AssertionError("cannot happen");
                 };
             }
-        } while (!atLeastOneScopeBuffer);
+        } while (!atLeastOneSessionBuffer);
         return bufs;
     }
 
@@ -126,75 +125,75 @@ public class AbstractChannelsTest {
         }
     }
 
-    @DataProvider(name = "confinedScopes")
-    public static Object[][] confinedScopes() {
+    @DataProvider(name = "confinedSessions")
+    public static Object[][] confinedSessions() {
         return new Object[][] {
-                { ScopeSupplier.NEW_CONFINED          },
+                { SessionSupplier.NEW_CONFINED          },
         };
     }
 
-    @DataProvider(name = "sharedScopes")
-    public static Object[][] sharedScopes() {
+    @DataProvider(name = "sharedSessions")
+    public static Object[][] sharedSessions() {
         return new Object[][] {
-                { ScopeSupplier.NEW_SHARED          },
+                { SessionSupplier.NEW_SHARED          },
         };
     }
 
-    @DataProvider(name = "closeableScopes")
-    public static Object[][] closeableScopes() {
-        return Stream.of(sharedScopes(), confinedScopes())
+    @DataProvider(name = "closeableSessions")
+    public static Object[][] closeableSessions() {
+        return Stream.of(sharedSessions(), confinedSessions())
                 .flatMap(Arrays::stream)
                 .toArray(Object[][]::new);
     }
 
-    @DataProvider(name = "implicitScopes")
-    public static Object[][] implicitScopes() {
+    @DataProvider(name = "implicitSessions")
+    public static Object[][] implicitSessions() {
         return new Object[][] {
-                { ScopeSupplier.GLOBAL       },
+                { SessionSupplier.GLOBAL       },
         };
     }
 
-    @DataProvider(name = "sharedAndImplicitScopes")
-    public static Object[][] sharedAndImplicitScopes() {
-        return Stream.of(sharedScopes(), implicitScopes())
+    @DataProvider(name = "sharedAndImplicitSessions")
+    public static Object[][] sharedAndImplicitSessions() {
+        return Stream.of(sharedSessions(), implicitSessions())
                 .flatMap(Arrays::stream)
                 .toArray(Object[][]::new);
     }
 
-    @DataProvider(name = "allScopes")
-    public static Object[][] allScopes() {
-        return Stream.of(implicitScopes(), closeableScopes())
+    @DataProvider(name = "allSessions")
+    public static Object[][] allSessions() {
+        return Stream.of(implicitSessions(), closeableSessions())
                 .flatMap(Arrays::stream)
                 .toArray(Object[][]::new);
     }
 
-    @DataProvider(name = "sharedScopesAndTimeouts")
-    public static Object[][] sharedScopesAndTimeouts() {
+    @DataProvider(name = "sharedSessionsAndTimeouts")
+    public static Object[][] sharedSessionsAndTimeouts() {
         return new Object[][] {
-                { ScopeSupplier.NEW_SHARED          ,  0 },
-                { ScopeSupplier.NEW_SHARED          , 30 },
+                { SessionSupplier.NEW_SHARED          ,  0 },
+                { SessionSupplier.NEW_SHARED          , 30 },
         };
     }
 
-    static class ScopeSupplier implements Supplier<ResourceScope> {
+    static class SessionSupplier implements Supplier<MemorySession> {
 
-        static final Supplier<ResourceScope> NEW_CONFINED =
-                new ScopeSupplier(ResourceScope::newConfinedScope, "newConfinedScope()");
-        static final Supplier<ResourceScope> NEW_SHARED =
-                new ScopeSupplier(ResourceScope::newSharedScope, "newSharedScope()");
-        static final Supplier<ResourceScope> NEW_IMPLICIT =
-                new ScopeSupplier(ResourceScope::newImplicitScope, "newImplicitScope()");
-        static final Supplier<ResourceScope> GLOBAL =
-                new ScopeSupplier(ResourceScope::globalScope, "globalScope()");
+        static final Supplier<MemorySession> NEW_CONFINED =
+                new SessionSupplier(MemorySession::openConfined, "newConfinedSession()");
+        static final Supplier<MemorySession> NEW_SHARED =
+                new SessionSupplier(MemorySession::openShared, "newSharedSession()");
+        static final Supplier<MemorySession> NEW_IMPLICIT =
+                new SessionSupplier(MemorySession::openImplicit, "newImplicitSession()");
+        static final Supplier<MemorySession> GLOBAL =
+                new SessionSupplier(MemorySession::global, "globalSession()");
 
-        private final Supplier<ResourceScope> supplier;
+        private final Supplier<MemorySession> supplier;
         private final String str;
-        private ScopeSupplier(Supplier<ResourceScope> supplier, String str) {
+        private SessionSupplier(Supplier<MemorySession> supplier, String str) {
             this.supplier = supplier;
             this.str = str;
         }
         @Override public String toString() { return str; }
-        @Override public ResourceScope get() { return supplier.get(); }
+        @Override public MemorySession get() { return supplier.get(); }
     }
 }
 
